# stack

./: .gitignore  README.md  dockerfile  pyproject.toml
conf/: config.yaml
conf/dataset/: dataset.yaml
conf/evaluation/: evaluation.yaml
conf/model/: model.yaml
conf/pipeline/: pipeline.yaml
conf/preprocessing/: preprocessing.yaml
models/: preprocessor.joblib
src/stack/: main.py  pipeline.py
src/stack/configurations/: config_loader.py  config_validation.py
src/stack/data_pipeline/: __init__.py  etl.py  hopsworks_implementation.py  preprocess_implementation.py
src/stack/inference_pipeline/: infer.py  infer_implementations.py
src/stack/training_pipeline/: trainer.py  training_implementation.py
src/stack/utils/: hopsworks_implementation.py
