[project]
name = "stack"
version = "0.1.0"
description = "Full Stack ML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "fastapi[standard]",
    "featureform<=1.12.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stack"]
